--- a/.travis.yml
+++ b/.travis.yml
@@ -6,3 +6,14 @@ before-install:
   - docker build -t vominhtuan164/docker-react -f Dockerfile.dev .
 script:
   - docker run -e CI=true vominhtuan164/docker-react npm run test
+deploy:
+  provider: elasticbeanstalk
+  region: "us-east-2"
+  app: "docker-react"
+  env: "Dockerreact-env"
+  bucket_name: "elasticbeanstalk-us-east-2-901182716177"
+  bucket_path: "docker-react"
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
